added faq page and css structure

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ img {
 
 /*MEDIA OBJECTS===============================================================*/
 .mediaObject {
-    margin: .5rem;
+    margin: .5rem 0;
     padding: 1rem;
 }
 
