--- a/style.css
+++ b/style.css
@@ -105,10 +105,14 @@ img {
     margin: .5rem;
     padding: .5rem;
     width: 30%;
+    height: 10rem;
     display: inline-block;
+    background-color: pink;
 }
+
 .object {
     margin: 0 auto;
+    height: 100%;
     
 }
 
@@ -118,8 +122,26 @@ img {
 }
 
 .object h5 {
+    float: left;
+    width: 100%;
     padding: .5rem 0 0 0;
-    text-align: center;  
+    text-align: center; 
+    color: black; 
+}
+
+.addNewItem, .addNewFoundItem {
+    width: 100%;
+    margin: 0 auto;
+    float: left;
+}
+
+.addNewItem img, .addNewFoundItem img {
+    width: 100%;
+    height: 10rem;
+}
+
+.lostItem {
+    background-color: green;
 }
 
 /*MODAL=======================================================================*/
@@ -237,6 +259,7 @@ header .logo {
     display: inline-block;
     margin: 0 auto;
     text-align: center;
+    width: 100%;
 }
 
 /*FOOTER======================================================================*/
