--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 /*============================================================================*/
 html {
     font-size: 62.5%;
+    color: rgba(44, 62, 80,1.0);
 }
 
 * {
@@ -10,12 +11,14 @@ html {
     padding: 0;
     border: none;
     outline: none;
-    background-color: rgba(0,0,0, .2);
+    /*background-color: rgba(0, 0, 0, .2);*/
+
 }
 
 body { 
     font-size: 17px; 
     font-size: 1.7rem; 
+    background-color: rgba(189, 195, 199,1.0);
 }
 
 .wrapper {
@@ -38,6 +41,16 @@ h1 {
 a {
     text-decoration: none;
     text-align: center;
+    color: rgba(44, 62, 80,1.0);
+    font-weight: 900;
+}
+
+.logo {
+    background: url(questionMark.png) no-repeat;
+    width: 50px;
+    height: 50px;
+    display: block;
+    float: left;
 }
 
 /*============================================================================*/
@@ -48,13 +61,38 @@ a {
 button {
     padding: 1rem 1.5rem;
     margin: .5rem;
+    border-radius: 1rem;
+    background-color: rgba(236, 240, 241,1);
+    color: rgba(44, 62, 80,1.0);
+    font-family: serif;
+    font-weight: 900;
+}
+
+button:hover {
+    background-color: rgba(189, 195, 199,1.0);
+}
+
+button:active {
+    background-color: rgba(236, 240, 241,1.0);
 }
 
 .button {
     padding: 1rem;
     margin: .5rem;
     color: #FFFFFF;
-    height: 2rem;
+    min-height: 2rem;
+    text-align: center;
+    border-radius: 1rem;
+    max-width: 20rem;
+    background-color: rgba(26, 188, 156,1);
+}
+
+.button:hover {
+    background-color: rgba(22, 160, 133,1.0);
+}
+
+.button:active {
+    background-color: rgba(39, 174, 96,1.0);
 }
 
 .mainContainer .button {
@@ -74,15 +112,36 @@ button {
     right: 0;
 }
 
-.logOutButton {
-    display: none;
+.indexLostButton {
+    background-color: rgba(243, 156, 18,1.0);
 }
+
+.indexLostButton:hover {
+    background-color: rgba(230, 126, 34,1.0);
+}
+
+.indexLostButton:active {
+    background-color: rgba(243, 156, 18,1.0);
+}
+
+.indexFoundButton {
+    background-color: rgba(46, 204, 113,1.0);
+}
+
+.indexFoundButton:hover {
+    background-color: rgba(39, 174, 96,1.0);
+}
+
+.indexFoundButton:active {
+    background-color: rgba(46, 204, 113,1.0);
+}
+
 
 /*IMAGES======================================================================*/
 img {
     width: 40px;
     height: 40px;
-    background-color: red;
+    background-color: rgba(41, 128, 185,1.0);
 }
 
 .leftImg {
@@ -107,7 +166,9 @@ img {
     width: 30%;
     height: 10rem;
     display: inline-block;
-    background-color: pink;
+    border-radius: 1rem;
+    border: 2px solid;
+    border-color: rgba(127, 140, 141,1.0);
 }
 
 .object {
@@ -126,7 +187,6 @@ img {
     width: 100%;
     padding: .5rem 0 0 0;
     text-align: center; 
-    color: black; 
 }
 
 .addNewItem, .addNewFoundItem {
@@ -141,16 +201,13 @@ img {
 }
 
 .lostItem {
-    background-color: green;
+    background-color: rgba(189, 195, 199,1.0);
+    color: rgba(127, 140, 141,1.0);
 }
 
 /*MODAL=======================================================================*/
-.logInModal, .registerModal, .deleteAccountModal, .itemModal, .updateItemModal, .foundItemModal, .updateAccountModal, .forgotPasswordModal{
-    display: none;
-}
-
 .modal {
-    /*display: none;*/
+    display: none;
     position: fixed;
     top: 0;
     right: 0;
@@ -159,7 +216,7 @@ img {
     z-index: 999;
     width: 100%;
     height: 100%;
-    background-color: rgba(255,0,0, .2);
+    background-color: rgba(189, 195, 199,.5);
     overflow: auto;
 }
 
@@ -172,7 +229,7 @@ img {
     right: 0;
     padding: 1rem;
     text-align: center;
-    background-color: pink;
+    background-color: rgba(52, 152, 219,1.0);
 }
 
 @media screen and (min-width:600px) {
@@ -244,6 +301,7 @@ header .logo {
 
 /*MAIN========================================================================*/
 .main {
+    background-color: rgba(236, 240, 241,1.0);
     float: left;
     width: 100%;
     padding: 1rem 0;
