--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 html {
     font-size: 62.5%;
     color: rgba(44, 62, 80,1.0);
+    height: 100%;
 }
 
 * {
@@ -19,11 +20,12 @@ body {
     font-size: 17px; 
     font-size: 1.7rem; 
     background-color: rgba(189, 195, 199,1.0);
+    min-height: 100%;
 }
 
 .wrapper {
     margin: 0 auto;
-    height: 100%;
+    min-height: 100%;
 }
 
 /*============================================================================*/
@@ -110,8 +112,18 @@ button:hover {
 
 .exitButton {
     position: fixed;
-    top: 0;
-    right: 0;
+    top: 10px;
+    right: 20px;
+    display: block;
+    padding: 5px 10px;
+    background-color: rgba(52, 152, 219,1.0);
+    color: rgba(236, 240, 241,1.0);
+    border-radius: 50%;
+}
+
+.exitButton:hover {
+    color: rgba(52, 152, 219,1.0);
+    background-color: rgba(236, 240, 241,1.0);
 }
 
 .indexLostButton {
@@ -197,13 +209,15 @@ img {
 
 .addNewItem, .addNewFoundItem {
     width: 100%;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     float: left;
 }
 
 .addNewItem img, .addNewFoundItem img {
-    width: 100%;
-    height: 10rem;
+    background-color: transparent;
+    max-width: 100%;
+    max-height: 100%;
+    
 }
 
 .lostItem {
